Fix Row Overflow on some mobile devices

--- a/client/src/components/Entry.css
+++ b/client/src/components/Entry.css
@@ -26,6 +26,10 @@
   height: 100px !important;
 }
 
+.row .col {
+  height: 100px !important;
+}
+
 .entryUrlText {
   font-size: 16px;
 }
